--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-li:hover {
+li {
     list-style: none;
     padding: 0.5rem;
 }
@@ -7,8 +7,6 @@ ul {
     display: none;
 }
 
-.card {
-    ul::hover {
-        display: block;
-    }
+.card:hover ul {
+    display: block;
 }
